tests/good/classes.latte
class A {}
class B {}
class C extends B {}

int main() { return 0;}