tests/bad/frontend/binaryOperation.latte
int main() {
	2 + true;
	return 0;
}
